--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     nginx:
         image: nginx:latest
         ports:
-            - "8080:80" # Exposez le port 8080 pour accéder à Nginx
+            - "80:80" # Exposez le port 8080 pour accéder à Nginx
         volumes:
             - .:/var/www/html
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
@@ -46,8 +46,8 @@ services:
         image: mongo:7
         restart: always
         environment:
-            MONGO_INITDB_ROOT_USERNAME: zoo_arcadia
-            MONGO_INITDB_ROOT_PASSWORD: zoo_arcadia
+            MONGO_INITDB_ROOT_USERNAME: arcadia
+            MONGO_INITDB_ROOT_PASSWORD: arcadia
         volumes:
             - mongo_data:/data/db
             - ./api/database/init/init-zoo-arcadia.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
