--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,16 @@ services:
             - DB_USER=${DB_USER}
             - DB_PASSWORD=${DB_PASSWORD}
             - DB_NAME=${DB_NAME}
-
         build:
             context: .
             dockerfile: Dockerfile
         volumes:
             - .:/var/www/html
-            - ./nginx.conf:/etc/nginx/conf.d/default.conf
         networks:
             - app-network
 
     nginx:
-        image: nginx:latest
+        image: nginx:1.27.2-alpine3.20
         ports:
             - "80:80" # Exposez le port 8080 pour accéder à Nginx
         volumes:
@@ -34,16 +32,16 @@ services:
     db:
         image: mysql:8
         environment:
-            MYSQL_ROOT_PASSWORD: zooarcadia
-            MYSQL_DATABASE: i-jurain_arcadia
-            MYSQL_USER: i-jurain
-            MYSQL_PASSWORD:
+            MYSQL_ROOT_PASSWORD: zoo_arcadia
+            MYSQL_DATABASE: zoo_arcadia
+            MYSQL_USER: isabelle
+            MYSQL_PASSWORD: zoo_arcadia
         ports:
             - "3306:3306"
         networks:
             - app-network
     mongo:
-        image: mongo:7
+        image: mongo:8
         restart: always
         environment:
             MONGO_INITDB_ROOT_USERNAME: arcadia
