--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 server {
-    listen 443;
+    listen 80;
+        listen 443 default_server ssl;
     server_name isabellejurain.fr;
 
     root /var/www/html/public;
