--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,20 @@
 server {
     listen 80;
         listen 443 default_server ssl;
-    server_name isabellejurain.fr;
+        listen [::]:443 ssl;
+    server_name isabellejurain.fr www.isabellejurain.fr;
 
-    root /var/www/html/public;
-    index index.php index.html index.htm;
+    root /home/debian/laravel-arcadia-project/public;
+    index index.php;
+    charset utf-8;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    error_page 404 /index.php;
 
     location ~ \.php$ {
         fastcgi_pass app:9000;  # Utilise le nom du service Docker pour PHP-FPM
