--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         ports:
             - "9000:9000"
         volumes:
-            - .:/var/www/html
+            - .:/var/www
 
     nginx:
         image: nginx:1.27.2-alpine3.20
@@ -23,7 +23,7 @@ services:
             - "443:443"
             - "80:80"
         volumes:
-            - .:/var/www/html
+            - .:/var/www
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - app
