--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,14 @@
 server {
-    listen 80;
-        listen 443 default_server ssl;
-        listen [::]:443 ssl;
+    listen 443 default_server ssl;
+    listen [::]:443 ssl;
     server_name isabellejurain.fr www.isabellejurain.fr;
 
-    root /home/debian/laravel-arcadia-project/public;
+    root /var/www/public;
     index index.php;
     charset utf-8;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
