--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:443 ssl;
     server_name isabellejurain.fr www.isabellejurain.fr;
 
-    root /var/www/public;
+    root /var/www/html/public;
     index index.php;
     charset utf-8;
 
@@ -12,6 +12,8 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
+        aio threads;
+        directio 5m;
     }
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
@@ -19,11 +21,11 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
-        fastcgi_pass app:9000;  # Utilise le nom du service Docker pour PHP-FPM
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-    }
+            include fastcgi_params;
+            fastcgi_pass app:9000;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
 
     location ~ /\.ht {
         deny all;
