--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,30 +14,16 @@ services:
         networks:
             - laravel
 
-    mysql:
-        image: mysql:8.0
-        container_name: laravel-mysql
-        command: --default-authentication-plugin=mysql_native_password
-        environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: laravel
-            MYSQL_USER: laravel
-            MYSQL_PASSWORD: laravel
-        ports:
-            - "3306:3306"
-        volumes:
-            - mysql-data:/var/lib/mysql
-        networks:
-            - laravel
-
     nginx:
         image: nginx:latest
         container_name: laravel-nginx
         volumes:
             - ./nginx:/etc/nginx/conf.d
             - .:/var/www/html
+            - ./ssl:/etc/nginx/ssl # /!\ il faut partager le dossier des certificats
         ports:
-            - "80:80"
+            - "443:443" # Port HTTPS
+            - "8080:80" # Port Http
         networks:
             - laravel
 
