Update docker-compose, Dockerfile, nginx, Create Makefile

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,20 @@
 server {
-    listen 443 default_server ssl;
-    listen [::]:443 ssl;
-    server_name isabellejurain.fr www.isabellejurain.fr;
-
+    listen 8080;
+    listen [::]:8080;
+    server_name localhost;
     root /var/www/html/public;
-    index index.php;
-    charset utf-8;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
 
+    index index.php;
+
+    charset utf-8;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
-        aio threads;
-        directio 5m;
+#         aio threads;
+#         directio 5m;
     }
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
@@ -21,13 +22,14 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
-            include fastcgi_params;
             fastcgi_pass app:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-        }
+            include fastcgi_params;
+            fastcgi_hide_header X-Powered-By;
+#             fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
 
-    location ~ /\.ht {
+    location ~ /.(?!well-known).* {
         deny all;
     }
 }
