--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
-    listen 8080;
-    listen [::]:8080;
-    server_name localhost;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name www.isabellejurain.fr isabellejurain.fr;
     root /var/www/html/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
