--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name www.isabellejurain.fr isabellejurain.fr;
-    root /var/www/html/public;
+    root /home/debian/laravel-project-arcadia/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
